  Reported by Laurent Gaffie. (Ilia)
- Fixed imagerectangle regression with 1x1 rectangle (libgd #106). (Pierre)
- Fixed htmlentities/htmlspecialchars not to accept partial multibyte
  sequences. (Stas)

- Fixed bug #43099 (XMLWriter::endElement() does not check # of params).
  (Ilia)
- Fixed bug #43020 (Warning message is missing with shuffle() and more
  than one argument). (Scott)
- Fixed bug #42943 (ext/mssql: Move *timeout initialization from RINIT
  to connect time). (Ilia)
- Fixed bug #42917 (PDO::FETCH_KEY_PAIR doesn't work with setFetchMode).
  (Ilia)
- Fixed bug #42890 (Constant "LIST" defined by mysqlclient and c-client).
  (Andrey)
- Fixed bug #42869 (automatic session id insertion adds sessions id to
  non-local forms). (Ilia)
- Fixed bug #42818 ($foo = clone(array()); leaks memory). (Dmitry)
- Fixed bug #42817 (clone() on a non-object does not result in a fatal
  error). (Ilia)
- Fixed bug #42785 (json_encode() formats doubles according to locale rather  
  then following standard syntax). (Ilia)
- Fixed bug #42783 (pg_insert() does not accept an empty list for
  insertion). (Ilia)
- Fixed bug #42772 (Storing $this in a static var fails while handling a cast
  to string). (Dmitry)
- Fixed bug #42767 (highlight_string() truncates trailing comment). (Ilia)
- Fixed bug #42739 (mkdir() doesn't like a trailing slash when safe_mode is 
  enabled). (Ilia)
- Fixed bug #42703 (Exception raised in an iterator::current() causes segfault
  in FilterIterator) (Marcus)
- Fixed bug #42699 (PHP_SELF duplicates path). (Dmitry)
- Fixed bug #42654 (RecursiveIteratorIterator modifies only part of leaves)
  (Marcus)
- Fixed bug #42643 (CLI segfaults if using ATTR_PERSISTENT). (Ilia)
- Fixed bug #42637 (SoapFault : Only http and https are allowed). (Bill Moran)
- Fixed bug #42629 (Dynamically loaded PHP extensions need symbols exported
  on MacOSX). (jdolecek at NetBSD dot org)
- Fixed bug #42627 (bz2 extension fails to build with -fno-common).